# LUNA-20

./: .gitignore  README.md  SUMMARY.md  build.sh  mcps
LUNA-os/: build.sh
LUNA-os/config/includes.chroot/opt/luna-hub/: CMakeLists.txt  backend.py  launcher.py
LUNA-os/config/includes.chroot/opt/luna-hub/qml/: App.qml  qmldir
LUNA-os/config/includes.chroot/opt/luna-hub/qml/controls/: LunaButton.qml  LunaDialog.qml  LunaDropdown.qml  LunaEmptyState.qml  LunaErrorState.qml  LunaIconButton.qml  LunaLoadingState.qml  LunaProgressBar.qml  LunaSearchField.qml  LunaSegmented.qml  LunaStatusBadge.qml  LunaTabBar.qml  LunaTextField.qml  LunaToast.qml  LunaToggle.qml  LunaTooltip.qml  qmldir
LUNA-os/config/includes.chroot/opt/luna-hub/qml/dashboard/: ChartLegend.qml  FanControlCard.qml  FanGauge.qml  FanPresetSelector.qml  LunaBoostBar.qml  MetricCard.qml  MetricCardSlot.qml  PerformanceMonitor.qml  PerformanceQueue.qml  QueueItem.qml  SeriesToggleRow.qml  Sparkline.qml  SystemInfoCard.qml  SystemOverviewHeader.qml  TemperatureCard.qml  TemperatureRow.qml  qmldir
LUNA-os/config/includes.chroot/opt/luna-hub/qml/dialogs/: BoostDetailsDialog.qml  ConfirmationDialog.qml  DiagnosticsDialog.qml  GameSelectionDialog.qml  qmldir
LUNA-os/config/includes.chroot/opt/luna-hub/qml/pages/: DashboardPage.qml  GamesPage.qml  NetworkPage.qml  OptimizerCurrentGamePanel.qml  OptimizerHistoryPanel.qml  OptimizerListPanel.qml  OptimizerPage.qml  OptimizerRecommendationsPanel.qml  PerformancePage.qml  RGBControlPage.qml  SettingsAdvanced.qml  SettingsAppearance.qml  SettingsField.qml  SettingsGeneral.qml  SettingsMonitoring.qml  SettingsNotifications.qml  SettingsPage.qml  SettingsPerformance.qml  SettingsPrivacy.qml  SettingsSection.qml  SettingsStartup.qml  SettingsToggle.qml  SystemToolsDiagnostics.qml  SystemToolsDrivers.qml  SystemToolsLogs.qml  SystemToolsPage.qml  SystemToolsRecovery.qml  SystemToolsServices.qml  SystemToolsStorage.qml  SystemToolsSysInfo.qml  SystemToolsUpdate.qml  qmldir
LUNA-os/config/includes.chroot/opt/luna-hub/qml/shell/: AppShell.qml  DialogLayer.qml  NotificationLayer.qml  Sidebar.qml  SidebarItem.qml  TopBar.qml  WindowControls.qml  qmldir
LUNA-os/config/includes.chroot/opt/luna-hub/qml/theme/: AdaptiveLayout.qml  Metrics.qml  Theme.qml  Typography.qml  qmldir
LUNA-os/config/includes.chroot/opt/luna-hub/service/: Cargo.toml
LUNA-os/config/includes.chroot/opt/luna-hub/service/src/: capability.rs  lib.rs  logging.rs  main.rs  runtime.rs  state.rs
LUNA-os/config/includes.chroot/opt/luna-hub/src/: main.cpp
LUNA-os/config/includes.chroot/opt/luna-hub/src/bridge/: IpcClient.cpp  IpcClient.h
LUNA-os/config/includes.chroot/opt/luna-hub/src/controller/: AppController.cpp  AppController.h  Controllers.cpp  Controllers.h  FanController.cpp  FanController.h  GameController.cpp  GameController.h  LunaBoostController.cpp  LunaBoostController.h  NavigationController.cpp  NavigationController.h  NotificationController.cpp  NotificationController.h  PerformanceController.cpp  PerformanceController.h  QueueController.cpp  QueueController.h  SettingsController.cpp  SettingsController.h  SystemInfoController.cpp  SystemInfoController.h  TelemetryController.cpp  TelemetryController.h
LUNA-os/config/includes.chroot/opt/luna-hub/src/model/: MockTelemetryModel.cpp  MockTelemetryModel.h
LUNA-os/config/includes.chroot/opt/luna-hub/static/: index.html
docs/: BUILD.md  INSTALLATION.md
(+111 files in other folders)
