[workspace]
members = ["."]
resolver = "2"

[package]
name = "luna-telemetryd"
version = "0.1.0"
edition = "2021"
description = "Luna OS telemetry collection service"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "luna_telemetryd"
path = "src/lib.rs"

[[bin]]
name = "luna-telemetryd"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }

[dev-dependencies]
tempfile = "3"
